--- a/org/2020-02-04-win10.org
+++ b/org/2020-02-04-win10.org
@@ -62,3 +62,17 @@ https://stackoverflow.com/questions/65272764/ports-are-not-available-listen-tcp-
 ctrl+v关掉
 * script
 win +r shutdown -s -t 3600 //关机，1小时后
+* remote desktop
+显示设置 -> 远程桌面
+默认远程端口: 3389
+
+
+电脑名称 = 如何连接到这台电脑->使用这台电脑的名称从远程设备进行连接-
+ip: 公网ip
+账号: 电脑名称\本地账号
+密码: 本地帐号的密码(PIN码之类的无法登录，需要改成账号走密码)
+
+eg:
+ip: 11.11.11.11
+账号： DESKTOP-E9HAFIJ\smile2333
+密码： 123456
