--- a/org/2020-02-09-proxy.org
+++ b/org/2020-02-09-proxy.org
@@ -82,3 +82,4 @@ https://www.moerats.com/archives/387/
 * ref
 https://blog.charlieethan.com/index.php/archives/04.html/comment-page-1 黑名单
 https://program-think.blogspot.com/2019/04/Proxy-Tricks.html?m=1 method
+https://my.subcloud.xyz/ 订阅转换
