--- a/org/2020-02-29-git.org
+++ b/org/2020-02-29-git.org
@@ -125,7 +125,7 @@ git push -u origin master
 一个commit就是一个我们所创建的提交，它指向了一个tree，这个tree保存了某一时刻项目根目录中的直接文件信息和直接目录信息，也就是说，这个tree会指向直接文件的blob对象，并且指向直接子目录的tree对象，子目录的tree对象又指向了子目录中直接文件的blob，以及子目录的直接子目录的tree，依此类推。
 *** 哈希码
 标识每个git对象
-* genral
+* script
 #+BEGIN_SRC bash
 #剔除被误加入VCS的文件，-r递归
 git rm -r --cached .gradle 
@@ -145,3 +145,5 @@ git update-index --assume-unchanged build/conf/a.conf
 git update-index --assume-unchanged build/conf/b.conf
 git ls-files -v | grep -e "^[hsmrck]"
 https://stackoverflow.com/questions/10879783/git-doesnt-ignore-2-specifically-named-files
+** merge with accept model
+eg. 旧分支切出后改动的pom accept高版本
