--- a/org/2022-06-05-transaction.org
+++ b/org/2022-06-05-transaction.org
@@ -1,7 +1,12 @@
 #+TITLE: transaction
 #+STARTUP: indent
+* general
 2PC
 3PC
+* spring
+** manual
+https://www.baeldung.com/spring-programmatic-transaction-management
+
 * ref
 Transaction and third-party invocation association
 https://softwareengineering.stackexchange.com/questions/280324/is-it-better-to-make-database-calls-or-external-api-calls-first-in-the-context-o
